Rsbkp dependency added

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "rsync"
   ],
   "author": "scarafia",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "rsbkp": "0.0.1"
+  }
 }
